[STYLE] 코드 품질 개선: 중복 로직 제거 및 데이터 검증 강화